# shuffle

./: .gitignore  Makefile  README.md  arch.ascii  btw.ascii  lennart.ascii  main.c  meson.build  shuffle.c  shuffle.h  test.ascii  testit.sh
